Wrote README.md for AppSphere and automated the building of zip package in IntelliJ.